# mermaid_mcp_server

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  deploy.sh  install.bat  install.sh  main.py  main_sse.py  pyproject.toml  requirements.txt  setup.py  test_client.py
mermaid_mcp_server/: __init__.py  main.py
