[project]
name = "mermaid_mcp_server"
version = "0.1.0"
description = "MCP Server for converting Mermaid diagram code to images"
authors = [
    {name = "wwzhouhui",email = "75271002@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.3",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []