[project]
name = "mermaid-mcp-server-png-pdf-jpg-svg"
version = "0.0.3"
description = "MCP Server for converting Mermaid diagram code to images"
authors = [
    {name = "wwzhouhui",email = "75271002@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.3",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]

[project.scripts]
mermaid-mcp-server-png-pdf-jpg-svg = "mermaid_mcp_server.main:main"

[project.urls]
"Homepage" = "https://github.com/wwwzhouhui/mcp-mermaid-server"
"Bug Tracker" = "https://github.com/wwwzhouhui/mcp-mermaid-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mermaid_mcp_server"]

[tool.uv]
dev-dependencies = []